# agent-procedure-service

./: APS-SPEC-001.md  README.md
aps-server/: Dockerfile  aps-executor.py  apslookup  docker-compose.yml  pyproject.toml
aps-server/aps/: auth.py  config.py  integrity.py  main.py  models.py  store.py
aps-server/aps/endpoints/: auth_hint.py  config_reload.py  health.py  metrics.py  resolve.py  services.py
aps-server/aps/middleware/: rate_limit.py  request_guard.py
aps-server/procedures/: README.md
aps-server/procedures/supply-chain/: cve-scanner.json  docker-supply-chain.json  github-actions-supply-chain.json  hook-config-example.json  npm-supply-chain.json  pypi-supply-chain.json
aps-server/procedures/supply-chain/advisories/: docker-advisories.json  github-actions-advisories.json  npm-advisories.json  pypi-advisories.json
aps-server/procedures/supply-chain/hooks/: cve-check.py
